--- a/src/css/expansion.scss
+++ b/src/css/expansion.scss
@@ -13,6 +13,7 @@
       visibility: hidden;
     }
 
+
     button {
       .q-focus-helper {
         visibility: visible !important;
@@ -22,5 +23,9 @@
     .q-item__section--side {
       padding-left: 10px;
     }
+  }
+  .q-card{
+    border-bottom-right-radius : 8px;
+    border-bottom-left-radius : 8px;
   }
 }
