--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -9,7 +9,9 @@ body {
 #q-app {
   background-color: $bgApp;
 }
-
+.border-radius{
+  border-radius: 8px;
+}
 .container {
   padding: 55px 62px 0 0;
   width: 100%;
@@ -19,7 +21,14 @@ body {
     font-size: 16px;
   }
 }
-
+.br-line{
+  width: 100%;
+  height: 1px;
+  display: block;
+  position: relative;
+  top: 15px;
+  background: #CCD9E5;
+}
 
 .q-btn {
   border-radius: 6px !important;
