--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -22,7 +22,7 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
-
+$green-9   : #088F5E;
 
 //custom scss
 $button-font-size : 15px;
