--- a/src/css/multiSelect.scss
+++ b/src/css/multiSelect.scss
@@ -2,9 +2,17 @@
   .q-focus-helper{
     background-color: $selectBoxFocusBg !important;
   }
-
+.q-item--active{
+  .q-focus-helper{
+    background-color: $selectBoxActiveFocusBg !important;
+  }
+}
 
 .multiSelect{
+  &.q-item--active{
+    color: #1a647a;
+    font-weight: 600;
+  }
   padding-left: 0;
   .multiSelectSection{
     display: flex;
