--- a/src/css/multiSelect.scss
+++ b/src/css/multiSelect.scss
@@ -17,7 +17,24 @@
   .multiSelectSection{
     display: flex;
     .q-checkbox__bg{
-      border-radius: 25%;
+      border-radius: 35%;
+      width: 45%;
+      height: 45%;
     }
+    .q-item__section{
+      margin-left: 0;
+    }
+  }
+}
+.hide-caret {
+  input{
+    caret-color: transparent;
+    cursor: pointer !important;
+  }
+  .q-field__control-container{
+    cursor: pointer !important;
+  }
+  .q-field__control{
+    cursor: pointer !important;
   }
 }
