--- a/src/css/table.scss
+++ b/src/css/table.scss
@@ -49,21 +49,22 @@
   }
 
   .filter-btn-dense {
-    margin-left: 7px;
-
     .q-btn__wrapper {
       padding-left: 9px;
       padding-right: 9px;
-      margin-top: 2px
+
+    }
+    @media (max-width: 1100px) {
+      .q-btn__wrapper {
+        padding: 0 5px;
+        i{
+          font-size: 16px;
+        }
+      }
     }
   }
 
-  .btn-dense {
-    .q-btn__wrapper {
-      padding-left: 9px;
-      padding-right: 9px;
-    }
-  }
+
 
   .tableRows:last-child {
     border-bottom: unset;
@@ -88,8 +89,3 @@
   }
 }
 
-.cancel-btn .q-btn__content {
-  span {
-    color: #065A75;
-  }
-}
